Added feedback from TA's on the data split in the base data.

--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -13,6 +13,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "### Additional notes from class chat ###\n",
+    "#### 1. Labels from dataset will be folder names\n",
+    "#### 2. Beware of the multi image model classifying into triplets instead of single digits. The output shape should be 1000 instead of 10\n",
+    "#### 3. DO NOT recombine the split data. It has to be used as is as per TA Khadjia\n",
+    "#### 4. From Khadjia: The provided splits into training, validation and testing were designed to simulate real-world scenarios. Teams must develop a baseline model using these splits and gthen improve upon this baseline through various techniques such as preprocessing and model architecture enhancements.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 6 - Load and preprocess the dataset for multi-label image-based digit classification task "
    ]
   },
