Started looking at how to fill the NA data

--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -18,10 +18,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>var1</th>\n",
+       "      <th>var2</th>\n",
+       "      <th>var3</th>\n",
+       "      <th>var4</th>\n",
+       "      <th>var5</th>\n",
+       "      <th>var6</th>\n",
+       "      <th>var7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>509.18</td>\n",
+       "      <td>417.681</td>\n",
+       "      <td>Micronesia</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>393.00</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-07-20 13:21:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>446.06</td>\n",
+       "      <td>666.182</td>\n",
+       "      <td>Dominica</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>352.05</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-04-04 21:30:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>235.50</td>\n",
+       "      <td>398.097</td>\n",
+       "      <td>Isle of Man</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>339.00</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-03-03 02:59:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>306.02</td>\n",
+       "      <td>518.163</td>\n",
+       "      <td>Turkmenistan</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>439.25</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-03-19 08:00:58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>453.08</td>\n",
+       "      <td>600.156</td>\n",
+       "      <td>Cameroon</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>422.95</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-03-18 13:22:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>211.72</td>\n",
+       "      <td>506.716</td>\n",
+       "      <td>Liechtenstein</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>310.60</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-03-18 13:00:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>401.42</td>\n",
+       "      <td>627.294</td>\n",
+       "      <td>French Guiana</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>390.05</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-03-28 02:29:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>498.90</td>\n",
+       "      <td>525.207</td>\n",
+       "      <td>Barbados</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>408.75</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-06-07 05:41:16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>257.90</td>\n",
+       "      <td>651.209</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>280.20</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-02-07 08:02:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>283.04</td>\n",
+       "      <td>467.801</td>\n",
+       "      <td>Chad</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>272.35</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-03-26 19:37:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>333.72</td>\n",
+       "      <td>188.193</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>289.30</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-07-08 17:14:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>440.16</td>\n",
+       "      <td>703.248</td>\n",
+       "      <td>Greenland</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>341.25</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-02-15 16:18:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>450.46</td>\n",
+       "      <td>654.968</td>\n",
+       "      <td>Dominica</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>412.90</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-03-11 14:50:56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "      <td>451.52</td>\n",
+       "      <td>634.303</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>338.55</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-04-28 02:55:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>230.74</td>\n",
+       "      <td>575.947</td>\n",
+       "      <td>Equatorial Guinea</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>260.85</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-02-24 06:17:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>461.86</td>\n",
+       "      <td>612.276</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>397.85</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-05-17 04:27:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1</td>\n",
+       "      <td>210.00</td>\n",
+       "      <td>441.743</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>310.30</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-04-12 14:01:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>374.06</td>\n",
+       "      <td>772.204</td>\n",
+       "      <td>Equatorial Guinea</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>343.40</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2019-07-15 09:42:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>231.82</td>\n",
+       "      <td>498.228</td>\n",
+       "      <td>Brunei Darussalam</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>257.90</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-04-24 13:46:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>398.58</td>\n",
+       "      <td>541.062</td>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>391.20</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2019-04-04 11:39:51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    target    var1     var2               var3   var4    var5 var6  \\\n",
+       "0        0  509.18  417.681         Micronesia  138.0  393.00   no   \n",
+       "1        0  446.06  666.182           Dominica   81.0  352.05  yes   \n",
+       "2        1  235.50  398.097        Isle of Man   90.0  339.00   no   \n",
+       "3        0  306.02  518.163       Turkmenistan  102.0  439.25  yes   \n",
+       "4        0  453.08  600.156           Cameroon  105.0  422.95   no   \n",
+       "5        1  211.72  506.716      Liechtenstein  111.0  310.60   no   \n",
+       "6        0  401.42  627.294      French Guiana   78.0  390.05   no   \n",
+       "7        0  498.90  525.207           Barbados  129.0  408.75  yes   \n",
+       "8        1  257.90  651.209        Netherlands  147.0  280.20   no   \n",
+       "9        1  283.04  467.801               Chad   69.0  272.35  yes   \n",
+       "10       1  333.72  188.193            Algeria   90.0  289.30  yes   \n",
+       "11       0  440.16  703.248          Greenland   87.0  341.25  yes   \n",
+       "12       0  450.46  654.968           Dominica  114.0  412.90   no   \n",
+       "13       0  451.52  634.303            Armenia   75.0  338.55   no   \n",
+       "14       1  230.74  575.947  Equatorial Guinea  132.0  260.85   no   \n",
+       "15       0  461.86  612.276              Egypt   93.0  397.85  yes   \n",
+       "16       1  210.00  441.743            Austria  132.0  310.30  yes   \n",
+       "17       0  374.06  772.204  Equatorial Guinea  102.0  343.40   no   \n",
+       "18       1  231.82  498.228  Brunei Darussalam   99.0  257.90  yes   \n",
+       "19       0  398.58  541.062         Luxembourg   69.0  391.20  yes   \n",
+       "\n",
+       "                   var7  \n",
+       "0   2019-07-20 13:21:37  \n",
+       "1   2019-04-04 21:30:46  \n",
+       "2   2019-03-03 02:59:37  \n",
+       "3   2019-03-19 08:00:58  \n",
+       "4   2019-03-18 13:22:35  \n",
+       "5   2019-03-18 13:00:12  \n",
+       "6   2019-03-28 02:29:19  \n",
+       "7   2019-06-07 05:41:16  \n",
+       "8   2019-02-07 08:02:31  \n",
+       "9   2019-03-26 19:37:46  \n",
+       "10  2019-07-08 17:14:01  \n",
+       "11  2019-02-15 16:18:49  \n",
+       "12  2019-03-11 14:50:56  \n",
+       "13  2019-04-28 02:55:10  \n",
+       "14  2019-02-24 06:17:18  \n",
+       "15  2019-05-17 04:27:31  \n",
+       "16  2019-04-12 14:01:08  \n",
+       "17  2019-07-15 09:42:19  \n",
+       "18  2019-04-24 13:46:10  \n",
+       "19  2019-04-04 11:39:51  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.read_excel('dataset1.xlsx')\n",
+    "\n",
+    "df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 925 entries, 0 to 924\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   target  925 non-null    int64  \n",
+      " 1   var1    925 non-null    float64\n",
+      " 2   var2    925 non-null    float64\n",
+      " 3   var3    925 non-null    object \n",
+      " 4   var4    325 non-null    float64\n",
+      " 5   var5    925 non-null    float64\n",
+      " 6   var6    925 non-null    object \n",
+      " 7   var7    925 non-null    object \n",
+      "dtypes: float64(4), int64(1), object(3)\n",
+      "memory usage: 57.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### About this dataset ###\n",
+    "#### var1, var2, var3, var7 columns are features ####\n",
+    "#### target column is the label ####\n",
+    "#### var3, var6 columns are categorical values - var 7 is a datetime ####\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We have null values in the data so lets enumerate them ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "target      0\n",
+       "var1        0\n",
+       "var2        0\n",
+       "var3        0\n",
+       "var4      600\n",
+       "var5        0\n",
+       "var6        0\n",
+       "var7        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,8 +464,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
