got date sorted out in source data and the transformed result is left in CSR Matrix for XGBoost

--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 771948_A23_T3A - Group Work Assignment #\n",
-    "# Task 1 - Numerical and categorical feature classification problem #\n",
+    "# Part 1 - Numerical and categorical feature classification problem #\n",
     "## Assignment by Chris Mintz 202369825 and Antonia Agunbiade [STUDENT ID HERE] ##"
    ]
   },
@@ -13,12 +13,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 1 - Load and preprocess the dataset for the classification problem (handle missing data, convert categorical features to numerical features) ###"
+    "# Task 1 - Load and preprocess the dataset for the classification problem (handle missing data, convert categorical features to numerical features) #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "19  2019-04-04 11:39:51  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "max      1.000000  539.920000  794.848000  180.000000  457.150000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_21920\\2903306367.py:10: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
+      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_15172\\2903306367.py:10: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
       "  df['var7'] = df['var7'].apply(fix_not_leap_year)\n"
      ]
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,9 +588,9 @@
     "def extract_datetime_features(dates):\n",
     "    dates = pd.to_datetime(dates, infer_datetime_format=True, errors='coerce')\n",
     "    return pd.DataFrame({\n",
-    "        'day': dates.dt.day,\n",
-    "        'month': dates.dt.month,\n",
     "        'year': dates.dt.year,\n",
+    "        'month': dates.dt.month,\n",
+    "        'day': dates.dt.day,\n",
     "        'dayofweek': dates.dt.dayofweek,\n",
     "        'hour': dates.dt.hour\n",
     "    })"
@@ -598,37 +598,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     day  month  year  dayofweek  hour\n",
-      "0     20      7  2019          5    13\n",
-      "1      4      4  2019          3    21\n",
-      "2      3      3  2019          6     2\n",
-      "3     19      3  2019          1     8\n",
-      "4     18      3  2019          0    13\n",
-      "..   ...    ...   ...        ...   ...\n",
-      "920   22      1  2019          1    12\n",
-      "921    1      2  2019          4    14\n",
-      "922   13      6  2019          3    18\n",
-      "923   27      5  2019          0     6\n",
-      "924   18      6  2019          1    17\n",
+      "     year  month  day  dayofweek  hour\n",
+      "0    2019      7   20          5    13\n",
+      "1    2019      4    4          3    21\n",
+      "2    2019      3    3          6     2\n",
+      "3    2019      3   19          1     8\n",
+      "4    2019      3   18          0    13\n",
+      "..    ...    ...  ...        ...   ...\n",
+      "920  2019      1   22          1    12\n",
+      "921  2019      2    1          4    14\n",
+      "922  2019      6   13          3    18\n",
+      "923  2019      5   27          0     6\n",
+      "924  2019      6   18          1    17\n",
       "\n",
       "[925 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(extract_datetime_features(df['var7']))"
+    "# test the datetime transformer function\n",
+    "date_df = extract_datetime_features(df['var7'])\n",
+    "print(date_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     target    var1     var2          var3   var4    var5 var6  \\\n",
+      "0         0  509.18  417.681    Micronesia  138.0  393.00   no   \n",
+      "1         0  446.06  666.182      Dominica   81.0  352.05  yes   \n",
+      "2         1  235.50  398.097   Isle of Man   90.0  339.00   no   \n",
+      "3         0  306.02  518.163  Turkmenistan  102.0  439.25  yes   \n",
+      "4         0  453.08  600.156      Cameroon  105.0  422.95   no   \n",
+      "..      ...     ...      ...           ...    ...     ...  ...   \n",
+      "920       0  422.34  547.259       Belarus    NaN  350.45  yes   \n",
+      "921       1  342.62  473.919         Japan    NaN  200.85   no   \n",
+      "922       1  265.10  538.170  Saint Martin    NaN  208.35  yes   \n",
+      "923       0  397.12  622.386          Chad    NaN  433.45  yes   \n",
+      "924       1  242.10  420.429       Albania    NaN  369.20  yes   \n",
+      "\n",
+      "                   var7  year  month  day  dayofweek  hour  \n",
+      "0   2019-07-20 13:21:37  2019      7   20          5    13  \n",
+      "1   2019-04-04 21:30:46  2019      4    4          3    21  \n",
+      "2   2019-03-03 02:59:37  2019      3    3          6     2  \n",
+      "3   2019-03-19 08:00:58  2019      3   19          1     8  \n",
+      "4   2019-03-18 13:22:35  2019      3   18          0    13  \n",
+      "..                  ...   ...    ...  ...        ...   ...  \n",
+      "920 2019-01-22 12:58:14  2019      1   22          1    12  \n",
+      "921 2019-02-01 14:37:34  2019      2    1          4    14  \n",
+      "922 2019-06-13 18:50:00  2019      6   13          3    18  \n",
+      "923 2019-05-27 06:19:27  2019      5   27          0     6  \n",
+      "924 2019-06-18 17:23:26  2019      6   18          1    17  \n",
+      "\n",
+      "[925 rows x 13 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DOCS When trying to deal with the datetime, we decided to convert the datetime to numerical features before putting it into the transform/fit process.\n",
+    "# This is because this is not a linear regression problem but a classification problem and we want to extract the day, month, year and time as separate features.\n",
+    "df_combined = pd.concat([df, date_df], axis=1)\n",
+    "print(df_combined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,15 +685,10 @@
     "\n",
     "# TO DO: I don't like the interpolation of the var 4 feature. Hoping to use an algorithm that supports null data or find a regression pattern to better fit OR it's possible this is not used as feature data at all.\n",
     "\n",
-    "\n",
-    "\n",
     "# Data normalization #\n",
-    "numerical_features = ['var1', 'var2', 'var4', 'var5']\n",
+    "numerical_features = ['var1', 'var2', 'var4', 'var5', 'year', 'month', 'day', 'dayofweek', 'hour']\n",
     "categorical_features = ['var3', 'var6']\n",
-    "date_feature = ['var7']\n",
     "\n",
-    "# define the preprocessor for dates\n",
-    "datetime_transformer = FunctionTransformer(extract_datetime_features)\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
@@ -659,20 +702,15 @@
     "        ]), categorical_features)\n",
     "    ])\n",
     "\n",
-    "df_transformed = preprocessor.fit_transform(df)\n",
-    "\n",
-    "# now back to dataframe\n",
-    "# TO DO - Fix this Shape of passed values is (925, 1), indices imply (925, 6)\n",
-    "#df_transformed = pd.DataFrame(df_transformed, columns = numerical_features + categorical_features)\n",
-    "\n",
-    "#df_transformed.head(20)"
+    "# the result of this will be a Compressed Sparse Row (CSR) matrix which works with XGBoost and scikit-learn.\n",
+    "df_transformed = preprocessor.fit_transform(df_combined)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 2 - Build a classifier for the classification problem using one of the specified models (logistic regression, decision trees, random forests, or artificial neural networks) ###"
+    "# Task 2 - Build a classifier for the classification problem using one of the specified models (logistic regression, decision trees, random forests, or artificial neural networks) #"
    ]
   },
   {
