--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "19  2019-04-04 11:39:51  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "max      1.000000  539.920000  794.848000  180.000000  457.150000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -552,14 +552,6 @@
       "2019-02-28 11:00:06\n",
       "2019-02-28 23:56:06\n",
       "2019-02-28 19:26:35\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_15172\\2903306367.py:10: FutureWarning: Inferring datetime64[ns] from data containing strings is deprecated and will be removed in a future version. To retain the old behavior explicitly pass Series(data, dtype=datetime64[ns])\n",
-      "  df['var7'] = df['var7'].apply(fix_not_leap_year)\n"
      ]
     }
    ],
@@ -578,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -620,6 +612,14 @@
       "\n",
       "[925 rows x 5 columns]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\skyma\\AppData\\Local\\Temp\\ipykernel_10692\\1019460975.py:5: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "  dates = pd.to_datetime(dates, infer_datetime_format=True, errors='coerce')\n"
+     ]
     }
    ],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -650,18 +650,18 @@
       "923       0  397.12  622.386          Chad    NaN  433.45  yes   \n",
       "924       1  242.10  420.429       Albania    NaN  369.20  yes   \n",
       "\n",
-      "                   var7  year  month  day  dayofweek  hour  \n",
-      "0   2019-07-20 13:21:37  2019      7   20          5    13  \n",
-      "1   2019-04-04 21:30:46  2019      4    4          3    21  \n",
-      "2   2019-03-03 02:59:37  2019      3    3          6     2  \n",
-      "3   2019-03-19 08:00:58  2019      3   19          1     8  \n",
-      "4   2019-03-18 13:22:35  2019      3   18          0    13  \n",
-      "..                  ...   ...    ...  ...        ...   ...  \n",
-      "920 2019-01-22 12:58:14  2019      1   22          1    12  \n",
-      "921 2019-02-01 14:37:34  2019      2    1          4    14  \n",
-      "922 2019-06-13 18:50:00  2019      6   13          3    18  \n",
-      "923 2019-05-27 06:19:27  2019      5   27          0     6  \n",
-      "924 2019-06-18 17:23:26  2019      6   18          1    17  \n",
+      "                    var7  year  month  day  dayofweek  hour  \n",
+      "0    2019-07-20 13:21:37  2019      7   20          5    13  \n",
+      "1    2019-04-04 21:30:46  2019      4    4          3    21  \n",
+      "2    2019-03-03 02:59:37  2019      3    3          6     2  \n",
+      "3    2019-03-19 08:00:58  2019      3   19          1     8  \n",
+      "4    2019-03-18 13:22:35  2019      3   18          0    13  \n",
+      "..                   ...   ...    ...  ...        ...   ...  \n",
+      "920  2019-01-22 12:58:14  2019      1   22          1    12  \n",
+      "921  2019-02-01 14:37:34  2019      2    1          4    14  \n",
+      "922  2019-06-13 18:50:00  2019      6   13          3    18  \n",
+      "923  2019-05-27 06:19:27  2019      5   27          0     6  \n",
+      "924  2019-06-18 17:23:26  2019      6   18          1    17  \n",
       "\n",
       "[925 rows x 13 columns]\n"
      ]
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,6 +711,34 @@
    "metadata": {},
    "source": [
     "# Task 2 - Build a classifier for the classification problem using one of the specified models (logistic regression, decision trees, random forests, or artificial neural networks) #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# going to use XGBoost to train a decision tree model\n",
+    "# we will use the transformed data from the preprocessor as the input data\n",
+    "# target variable is the 'target' column from original df dataset\n",
+    "import xgboost as xgb\n",
+    "X = df_transformed\n",
+    "y = df['target']\n",
+    "\n",
+    "# Convert to DMatrix\n",
+    "dtrain = xgb.DMatrix(data=X, label=y)\n",
+    "\n",
+    "# Set parameters for XGBoost\n",
+    "params = {\n",
+    "    'objective': 'binary:logistic',  # for binary classification\n",
+    "    'max_depth': 6,\n",
+    "    'eta': 0.3,\n",
+    "    'eval_metric': 'logloss'\n",
+    "}\n",
+    "\n",
+    "# Train the model\n",
+    "bst = xgb.train(params, dtrain, num_boost_round=100)"
    ]
   },
   {
@@ -765,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
