--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "19  2019-04-04 11:39:51  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "max      1.000000  539.920000  794.848000  180.000000  457.150000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,22 +723,33 @@
     "# we will use the transformed data from the preprocessor as the input data\n",
     "# target variable is the 'target' column from original df dataset\n",
     "import xgboost as xgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# setup our features and labels\n",
     "X = df_transformed\n",
     "y = df['target']\n",
     "\n",
-    "# Convert to DMatrix\n",
-    "dtrain = xgb.DMatrix(data=X, label=y)\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)\n",
     "\n",
-    "# Set parameters for XGBoost\n",
+    "# We're going to use the DMatrix data structure from XGBoost. This is an optimized data structure that works with XGBoost and is optimized for memory and speed\n",
+    "# Create the regression matrices in DMatrix format\n",
+    "dtrain_reg = xgb.DMatrix(X_train, y_train)\n",
+    "dtest_reg = xgb.DMatrix(X_test, y_test)\n",
+    "\n",
+    "\n",
+    "# Now set parameters for XGBoost\n",
     "params = {\n",
-    "    'objective': 'binary:logistic',  # for binary classification\n",
+    "    'objective': 'reg:squarederror',  \n",
     "    'max_depth': 6,\n",
     "    'eta': 0.3,\n",
-    "    'eval_metric': 'logloss'\n",
+    "    'eval_metric': 'logloss',\n",
+    "    'tree_method': 'hist'\n",
     "}\n",
     "\n",
-    "# Train the model\n",
-    "bst = xgb.train(params, dtrain, num_boost_round=100)"
+    "# We'll look at the ideal number of rounds in hyperparameter tuning but for now let's use 100 rounds\n",
+    "n = 100\n",
+    "model = xgb.train(params, dtrain_reg, n)"
    ]
   },
   {
@@ -750,10 +761,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE of the base model:  0.260\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's look at the model's performance and see if any hyperparameter tuning is needed\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "\n",
+    "predictions = model.predict(dtest_reg)\n",
+    "# compare the predictions to the actual values\n",
+    "rmse = root_mean_squared_error(y_test, predictions)\n",
+    "print(f'RMSE of the base model: {rmse: .3f}')"
+   ]
   },
   {
    "cell_type": "markdown",
