model training and hyperparameter tuning

--- a/module 3 final assignment/final assignment part 1.ipynb
+++ b/module 3 final assignment/final assignment part 1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "19  2019-04-04 11:39:51  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "max      1.000000  539.920000  794.848000  180.000000  457.150000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,12 +710,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2 - Build a classifier for the classification problem using one of the specified models (logistic regression, decision trees, random forests, or artificial neural networks) #"
+    "# Task 2 - Build a classifier for the classification problem using one of the specified models (logistic regression, decision trees, random forests, or artificial neural networks) #\n",
+    "\n",
+    "### \n",
+    "<b>Refereces</b>\n",
+    "\n",
+    "DataCamp. (2023). Learn XGBoost in Python: A Step-by-Step Tutorial. Available at: https://www.datacamp.com/tutorial/xgboost-in-python [Accessed 19 Aug. 2024].\n",
+    "\n",
+    "XGBoost Contributors. (2024). XGBoost Parameters — xgboost 2.1.1 documentation. Available at: https://xgboost.readthedocs.io/en/stable/parameter.html [Accessed 19 Aug. 2024].\n",
+    "\n",
+    "###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +752,7 @@
     "    'objective': 'reg:squarederror',  \n",
     "    'max_depth': 6,\n",
     "    'eta': 0.3,\n",
-    "    'eval_metric': 'logloss',\n",
+    "    'eval_metric': 'rmse',\n",
     "    'tree_method': 'hist'\n",
     "}\n",
     "\n",
@@ -761,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -780,6 +789,161 @@
     "# compare the predictions to the actual values\n",
     "rmse = root_mean_squared_error(y_test, predictions)\n",
     "print(f'RMSE of the base model: {rmse: .3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    train-rmse-mean  train-rmse-std  test-rmse-mean  test-rmse-std\n",
+      "0          0.359950        0.001390        0.373904       0.002923\n",
+      "1          0.261928        0.000928        0.293481       0.006864\n",
+      "2          0.194283        0.002384        0.246405       0.012310\n",
+      "3          0.146789        0.002882        0.220290       0.015217\n",
+      "4          0.113376        0.003406        0.207328       0.018781\n",
+      "5          0.090349        0.002964        0.200462       0.019948\n",
+      "6          0.073828        0.002580        0.196181       0.021589\n",
+      "7          0.062180        0.002946        0.193530       0.022102\n",
+      "8          0.052818        0.003235        0.192888       0.023142\n",
+      "9          0.045744        0.002899        0.192215       0.023588\n",
+      "10         0.040799        0.003040        0.191935       0.023863\n",
+      "11         0.037110        0.003348        0.191977       0.024354\n",
+      "12         0.034093        0.003328        0.192074       0.024766\n",
+      "13         0.031694        0.003509        0.191736       0.025091\n"
+     ]
+    }
+   ],
+   "source": [
+    "# looking to improve on the RMSE by using validation sets\n",
+    "# XGBoost has a built-in cross-validation function that we can use to evaluate the model\n",
+    "# using early_stopping_rounds we can stop the training if the model stops improving\n",
+    "cv_results = xgb.cv(\n",
+    "    params,\n",
+    "    dtrain_reg,\n",
+    "    num_boost_round=200,\n",
+    "    seed=0,\n",
+    "    nfold=5,\n",
+    "    metrics={'rmse'},\n",
+    "    early_stopping_rounds=10\n",
+    ")\n",
+    "\n",
+    "print(cv_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:0.36082\tvalidation-rmse:0.38908\n",
+      "[1]\ttrain-rmse:0.26543\tvalidation-rmse:0.32125\n",
+      "[2]\ttrain-rmse:0.19981\tvalidation-rmse:0.28007\n",
+      "[3]\ttrain-rmse:0.14988\tvalidation-rmse:0.25651\n",
+      "[4]\ttrain-rmse:0.11937\tvalidation-rmse:0.24833\n",
+      "[5]\ttrain-rmse:0.09830\tvalidation-rmse:0.24406\n",
+      "[6]\ttrain-rmse:0.08338\tvalidation-rmse:0.24472\n",
+      "[7]\ttrain-rmse:0.07192\tvalidation-rmse:0.24560\n",
+      "[8]\ttrain-rmse:0.06233\tvalidation-rmse:0.24696\n",
+      "[9]\ttrain-rmse:0.05445\tvalidation-rmse:0.24737\n",
+      "[10]\ttrain-rmse:0.04949\tvalidation-rmse:0.24795\n",
+      "[11]\ttrain-rmse:0.04569\tvalidation-rmse:0.24799\n",
+      "[12]\ttrain-rmse:0.04161\tvalidation-rmse:0.24933\n",
+      "[13]\ttrain-rmse:0.03936\tvalidation-rmse:0.24940\n",
+      "[14]\ttrain-rmse:0.03767\tvalidation-rmse:0.24975\n",
+      "[15]\ttrain-rmse:0.03667\tvalidation-rmse:0.25132\n"
+     ]
+    }
+   ],
+   "source": [
+    "evals = [(dtrain_reg, 'train'), (dtest_reg, 'validation')]\n",
+    "\n",
+    "model = xgb.train(\n",
+    "    params,\n",
+    "    dtrain_reg,\n",
+    "    num_boost_round=200,\n",
+    "    evals=evals,\n",
+    "    early_stopping_rounds=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <b>Observation</b>\n",
+    "The training has early-stopped at 15 rounds. It is here that the training loss is low but also takes the slightly fluctuating validation loss into account which we want to watch to ensure we are not getting into overfitting with too many rounds.\n",
+    "## "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:0.36328\tvalidation-rmse:0.38229\n",
+      "[50]\ttrain-rmse:0.02804\tvalidation-rmse:0.23320\n",
+      "[100]\ttrain-rmse:0.01314\tvalidation-rmse:0.23394\n",
+      "[150]\ttrain-rmse:0.00644\tvalidation-rmse:0.23437\n",
+      "[200]\ttrain-rmse:0.00355\tvalidation-rmse:0.23438\n",
+      "[250]\ttrain-rmse:0.00185\tvalidation-rmse:0.23444\n",
+      "[300]\ttrain-rmse:0.00107\tvalidation-rmse:0.23445\n",
+      "[350]\ttrain-rmse:0.00068\tvalidation-rmse:0.23449\n",
+      "[400]\ttrain-rmse:0.00059\tvalidation-rmse:0.23450\n",
+      "[450]\ttrain-rmse:0.00057\tvalidation-rmse:0.23449\n",
+      "[500]\ttrain-rmse:0.00056\tvalidation-rmse:0.23449\n",
+      "[550]\ttrain-rmse:0.00055\tvalidation-rmse:0.23450\n",
+      "[600]\ttrain-rmse:0.00053\tvalidation-rmse:0.23450\n",
+      "[650]\ttrain-rmse:0.00053\tvalidation-rmse:0.23450\n",
+      "[700]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
+      "[750]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
+      "[800]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
+      "[850]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
+      "[900]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
+      "[950]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n",
+      "[999]\ttrain-rmse:0.00053\tvalidation-rmse:0.23449\n"
+     ]
+    }
+   ],
+   "source": [
+    "# try a very high number of rounds to see if we can get a better RMSE for validation\n",
+    "params_b = {\n",
+    "    'objective':'reg:squarederror', \n",
+    "    'max_depth':6, \n",
+    "    'eta':0.3, \n",
+    "    'subsample':0.8, \n",
+    "    'colsample_bytree':0.8\n",
+    "    }\n",
+    "n_b = 1000\n",
+    "\n",
+    "model_b = xgb.train(\n",
+    "    params_b, \n",
+    "    dtrain_reg, \n",
+    "    n_b, \n",
+    "    evals=evals, \n",
+    "    verbose_eval=50\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <b>Observation</b>\n",
+    "Interesting attempt to improve the model but as was shown in early-stop, there is little validation loss improvement even by the time the model reaches 50 rounds.\n",
+    "##"
    ]
   },
   {
